protect HOSTAPPEND from silly abort

--- a/src/Makefile
+++ b/src/Makefile
@@ -110,17 +110,24 @@ endif
 # if it exists then assume that all product libraries are in 
 # ${PRODUCT)/lib$BTNESS; otherwise leave default LIB_SDIR as is.
 
-TESTFILE = $(CERN_DIR)/lib$(BITNESS)/libpacklib.a
-ifneq ($(wildcard $(TESTFILE)),) 
-   LIB_SDIR  = lib$(BITNESS)
-endif
+#TESTFILE = $(CERN_DIR)/lib$(BITNESS)/libpacklib.a
+#ifneq ($(wildcard $(TESTFILE)),) 
+#   LIB_SDIR  = lib$(BITNESS)
+#endif
 
 # --------------------------------------------------
 # define libraries
 
 
-  LGSL    =  $(GSL_DIR)/$(LIB_SDIR)/libgsl.a  \
-	     $(GSL_DIR)/$(LIB_SDIR)/libgslcblas.a
+# xxxx mark delete 4.1.2024 xxxxx
+#  LGSL    =  $(GSL_DIR)/$(LIB_GSLDIR)/libgsl.a  \
+#	     $(GSL_DIR)/$(LIB_GSLDIR)/libgslcblas.a
+# xxxxxxxxx
+
+  LIB_GSLDIR = lib
+  LGSL    =  -L$(GSL_DIR)/$(LIB_GSLDIR) -lgsl  \
+	     -L$(GSL_DIR)/$(LIB_GSLDIR) -lgslcblas
+
   IGSL    =  -I$(GSL_DIR)/include
 
   LCFITSIO =  -L$(CFITSIO_DIR)/$(LIB_SDIR) -lcfitsio
