DEBUB_FLAG=1219 -> zphot search for initial params is over z/(1+z) bins instead of z bins

--- a/src/Makefile
+++ b/src/Makefile
@@ -66,7 +66,7 @@ CC   = gcc
 #  EXTRA_FLAGS = -O1    # -ftree-vectorize -ftree-vectorizer-verbose=2
   PROFILEFLAG = 
 
-#EXTRA_FLAGS = -O2 # XXX RESTORE
+EXTRA_FLAGS = -O2  # xxx RESTORE
 #EXTRA_FLAGS = -g -fbounds-check  # valgrind --leak-check=full 
 
 # check if gcc version is 10 or higher (9.2020)
