fix memory leak reading FITS files (from refactor last week)

--- a/src/Makefile
+++ b/src/Makefile
@@ -63,6 +63,7 @@ FFC  = gfortran
 #CC   = cc
 CC   = gcc
 
+ EXTRA_FLAGS =
 #  EXTRA_FLAGS = -O1    # -ftree-vectorize -ftree-vectorizer-verbose=2
   PROFILEFLAG = 
 
